# loco-core

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CPPLINT.cfg  MANIFEST.in  README.md  loco.sublime-project  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
_legacy/: loco_single_body.cpp  test_parser_rlsim.cpp
_legacy/examples/cpp/agents/: CMakeLists.txt
_legacy/examples/cpp/compounds/: CMakeLists.txt  example_compounds.cpp
bindings/: CMakeLists.txt  loco_bindings_py.cpp  loco_common_py.cpp  loco_common_py.h
bindings/components/: loco_components_py.cpp  loco_data_py.cpp
cmake/: Definitions.cmake  Dependencies.cmake  FindSphinx.cmake  LocoBackendsSetup.cmake  LocoDefinitions.cmake  LocoDependencies.cmake  LocoVisualizersSetup.cmake  dart-no-uninstall-target.patch
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  docs_cpp_api.rst  docs_python_api.rst  index.rst
docs/api/: cpp_primitives.rst  cpp_simulation.rst  cpp_visualizer.rst  python_primitives.rst  python_simulation.rst  python_visualizer.rst
docs/primitives/: constraints.rst  examples.rst  features.rst  introduction.rst
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  example_00_common.cpp  example_01_drawable.cpp  example_01_scenario.cpp  example_02_scenario.cpp
examples/cpp/agents/: CMakeLists.txt  test_agents.cpp
examples/cpp/compounds/: example_compounds.cpp
examples/cpp/kinematic_trees/: example_mjcf_parser.cpp  example_programmatical.cpp  example_programmatical_double_pendulum.cpp
examples/cpp/primitives/: CMakeLists.txt  test_hfield.cpp  test_primitives.cpp
examples/cpp/single_bodies/: example_collision_filtering.cpp  example_compound.cpp  example_constraints.cpp  example_contacts.cpp  example_editor.cpp  example_friction.cpp  example_hfield.cpp  example_hfields_1.cpp  example_hfields_2.cpp  example_hfields_3.cpp  example_meshes_user.cpp  example_primitives.cpp  example_resizing.cpp  example_resizing_hfields.cpp  example_resizing_meshes.cpp  example_trimesh.cpp  example_ycb_dataset.cpp
examples/cpp/terrain_generators/: CMakeLists.txt
examples/python/: example_00_common.py
examples/python/primitives/: example_primitives.py
examples/python/single_bodies/: example_contacts.py  example_hfields_1.py  example_meshes_user.py  example_primitives.py  example_resizing.py
ext/: .gitignore  CMakeLists.txt
glviz/: CMakeLists.txt
glviz/include/: glviz_common.h  glviz_drawable.h  glviz_kintree.h  glviz_sandbox.h  glviz_terrainGen.h  glviz_ui.h  glviz_viz.h
glviz/include/ui/: glviz_ui_bodies.h
glviz/src/: glviz_common.cpp  glviz_drawable.cpp  glviz_kintree.cpp  glviz_sandbox.cpp  glviz_terrainGen.cpp  glviz_ui.cpp  glviz_viz.cpp
glviz/src/ui/: glviz_ui_bodies.cpp
include/: agent_wrapper.h  api_adapter.h  loco.h  loco_common.h  loco_config.h  loco_data.h  loco_logger.h  loco_math.h  loco_object.h  loco_runtime.h  loco_scenario.h  loco_simulation.h  model_loader.h  runtime.h  runtime_loader.h  scenario.h  simulation_base.h  terrain_base.h  terrain_wrapper.h  tysoc_common.h  tysoc_config.h  tysoc_logger.h  tysoc_math.h
opengl_viz/: CMakeLists.txt
opengl_viz/include/: loco_visualizer_opengl.h  loco_visualizer_opengl_camera.h  loco_visualizer_opengl_common.h  loco_visualizer_opengl_drawable.h  loco_visualizer_opengl_drawable_adapter.h  loco_visualizer_opengl_light.h
opengl_viz/include/editor/: loco_visualizer_opengl_editor.h
opengl_viz/src/: loco_visualizer_opengl.cpp  loco_visualizer_opengl_camera.cpp  loco_visualizer_opengl_common.cpp  loco_visualizer_opengl_drawable.cpp  loco_visualizer_opengl_drawable_adapter.cpp  loco_visualizer_opengl_light.cpp
opengl_viz/src/editor/: loco_visualizer_opengl_editor.cpp
python/loco/bindings/: .clang-tidy  CMakeLists.txt  bindings_py.cpp  body_py.cpp  common_py.cpp  drawable_py.cpp  loco_bindings_py.cpp  loco_common_py.cpp  loco_common_py.h  loco_data_py.cpp  loco_object_py.cpp  loco_runtime_py.cpp  loco_scenario_py.cpp  loco_simulation_py.cpp  loco_visualizer_py.cpp  scenario_py.cpp  simulation_py.cpp
python/loco/bindings/components/: loco_components_py.cpp  loco_data_py.cpp
python/loco/bindings/kintrees/: loco_kintrees_py.cpp
python/loco/bindings/primitives/: loco_primitives_py.cpp
pytysoc/: CMakeLists.txt  __init__.py
pytysoc/bindings/: CMakeLists.txt
pytysoc/bindings/include/: pytysoc_agent_core.h  pytysoc_bindings.h  pytysoc_body.h  pytysoc_collision.h  pytysoc_common.h  pytysoc_compound_body.h  pytysoc_data.h  pytysoc_runtime.h  pytysoc_scenario.h  pytysoc_sensors.h  pytysoc_single_body.h  pytysoc_terrainGen.h  pytysoc_visual.h  pytysoc_visualizer.h
pytysoc/bindings/src/: pytysoc_agent_core.cpp  pytysoc_bindings.cpp  pytysoc_body.cpp  pytysoc_collision.cpp  pytysoc_common.cpp  pytysoc_compound.cpp  pytysoc_compound_body.cpp  pytysoc_data.cpp  pytysoc_joint.cpp  pytysoc_runtime.cpp  pytysoc_scenario.cpp  pytysoc_sensors.cpp  pytysoc_simulation.cpp  pytysoc_single_body.cpp  pytysoc_terrainGen.cpp  pytysoc_visual.cpp  pytysoc_visualizer.cpp
scripts/: no_submodules.sh  remove_dependencies.sh  setup.sh  setup_dependencies.sh  status_dependencies.sh  util_meshmover.py  ycb_downloader.py
src/: agent_wrapper.cpp  api_adapter.cpp  loco_data.cpp  (+16 more)
tests/: CMakeLists.txt  test_cache_models.cpp  test_parser_rlsim.cpp  test_parser_urdf.cpp  test_sandbox.cpp  test_sandbox_coordinates.cpp
tests/cpp/: CMakeLists.txt  test_common.cpp  test_common_hfield_data.cpp  test_common_mesh_data.cpp  test_components.cpp  test_data_base.cpp  test_data_components.cpp  test_json_parsing.cpp  test_null_simulation.cpp  test_null_visualizer.cpp  test_runtime_empty.cpp  test_runtime_openglviz_egl.cpp  test_runtime_openglviz_glfw.cpp  test_scenario.cpp  test_utils_parsing_helpers.cpp  test_utils_xml_element.cpp  test_utils_xml_schema.cpp
tests/python/: test_common.py  test_common_hfield_data.py  test_common_mesh_data.py  test_components.py  test_data_base.py  test_data_components.py  test_null_simulation.py  test_runtime_openglviz_egl.py  test_scenario.py
unittest/: CMakeLists.txt
(+519 files in other folders)
