[metadata]
name = loco
version = 0.1.1
description = Multi physics-backend Locomotion framework
long_description = file: README.md
long_description_content_type = text/markdown
author = Wilbert Santos Pumacay Huallpa
license = MIT License
author_email = wilbert.pumacay@ucsp.edu.pe
url = https://github.com/wpumacay/loco-core
keywords = rl, robotics, locomotion
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
zip_safe = False
python_requires = >=3.7

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    venv

max-line-length = 80